# ginkgo-tutorial

./: CMakeLists.txt
hello-world/: CMakeLists.txt  hello-world.cpp  matrix-assembly.cpp  read-matrix.cpp  solve.cpp
